# helmholtz

./: CMakeLists.txt  README  helm.nb
src/: helmholtz.cpp  helmholtz.h  linear_matrix.h  main.cpp
